--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "all-countries-and-cities-json": "^1.0.0",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
+    "quasar": "^2.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuelidate": "^0.7.7",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -33,8 +40,9 @@
     "jest": "^27.0.5",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass": "1.32.12",
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-quasar": "~5.0.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
